------------------------------------------------------------------------
0.20 | Piotr Roszatycki <dexter@debian.org> | 2008-12-02

New:

* Major API changes.

* New methods: to_bool, to_number, to_string, get_caller_stacktrace.

* Removed methods: numerify, stringify, _caller_backtrace.

Changes:

* Reference arguments stored as caller_stack are weakened if it is possible.

* Used Symbol::qualify_to_ref() if it is possible.

------------------------------------------------------------------------
0.1901 | Piotr Roszatycki <dexter@debian.org> | 2008-10-13

Fixes:

* Some warnings disabled.

* Added missing test file to manifest.

* Some POD errors fixed.

Changes:

* Updated bundled Test::Unit::Lite to 0.1002.

------------------------------------------------------------------------
0.19 | Piotr Roszatycki <dexter@debian.org> | 2008-10-08

Fixes:

* Don't create package if it is loaded correcly.

Changes:

* Cleaned up "with" method.

* Updated bundled Test::Unit::Lite to 0.1001.

------------------------------------------------------------------------
0.18 | Piotr Roszatycki <dexter@debian.org> | 2008-10-08

New:

* New method "matches" and overloaded operator "~~" are similar to
  "with" method and can be used with new "given" syntax.
  
  eval { Exception::Base->throw( message => "foo" ) };
  if ($@) {
    my $e = Exception::Base->catch;
    given ($e) {
      when ({ message => "foo" }) { warn "has a foo message"; }
      when ("Exception::Base")    { warn "is an Exception::Base"; }
    }
  }

* The exception class can be created with "import" interface in own package.

  package Exception::My;
  use Exception::Base (__PACKAGE__) =>
    'has' => 'myattr',
  };

* New attribute "stringify_attributes" defines attributes which create
  string returned by stringify method.

  use Exception::Base 'Exception::WithReason' =>
    'has' => 'reason',
    stringify_attributes => ['message', 'reason'],
  };
  eval { Exception::WithReason->(
    message => "My message",