@@ -5,15 +5,23 @@ New:
 
 * Major API changes.
 
-* New methods: to_bool, to_number, to_string, get_caller_stacktrace.
+* New methods to_number/to_string replaced numerify/stringify.
 
-* Removed methods: numerify, stringify, _caller_backtrace.
+* New method get_caller_stacktrace replaced _caller_backtrace.
+
+* New method: to_bool.
+
+* Removed method try.
+
+* Removed export of try/catch/throw methods.
+
+* New internal function qualify_to_ref() which uses Symbol module if it is
+  possible.
 
 Changes:
 
 * Reference arguments stored as caller_stack are weakened if it is possible.
 
-* Used Symbol::qualify_to_ref() if it is possible.
 
 ------------------------------------------------------------------------
 0.1901 | Piotr Roszatycki <dexter@debian.org> | 2008-10-13
